--- a/.env.dev
+++ b/.env.dev
@@ -1,4 +1,7 @@
-
 ###> symfony/framework-bundle ###
 APP_SECRET=0d1c32636a1ff4942ef6b095d068c88a
 ###< symfony/framework-bundle ###
+
+###> nelmio/cors-bundle ###
+CORS_ALLOW_ORIGIN=http://localhost:5173
+###< nelmio/cors-bundle ###
