--- a/composer.json
+++ b/composer.json
@@ -15,7 +15,9 @@
         "doctrine/orm": "^3.3",
         "lexik/jwt-authentication-bundle": "^3.1",
         "nelmio/api-doc-bundle": "^5.3",
+        "nelmio/cors-bundle": "^2.5",
         "predis/predis": "^3.0",
+        "stripe/stripe-php": "^17.4",
         "symfony/asset": "7.3.*",
         "symfony/cache": "7.3.*",
         "symfony/console": "7.3.*",
