--- a/composer.json
+++ b/composer.json
@@ -90,6 +90,7 @@
         "phpstan/extension-installer": "^1.4",
         "phpstan/phpstan": "*",
         "phpstan/phpstan-symfony": "^2.0",
+        "phpunit/phpunit": "^12.3",
         "symfony/maker-bundle": "^1.63"
     }
 }
